-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
If the LNET_DUMP_ON_PANIC macro is defined by enabling the --enable-panic_dumplog option at configure time, an error occurs during the libcfs build process.
This error is due to specifying an incorrect parameter when calling the cfs_print_to_console() function within the cfs_trace_debug_print() function.
- is related to
-
LU-17623 sanity-scrub: ASSERTION(debug_buf == string_buf) failed
-
- Resolved
-