LU-18968 libcfs: fix invalid cfs_print_to_console() calls

The cfs_print_to_console() function was changed so that it no
longer accepts mask information as a parameter.

However, functions such as cfs_trace_debug_print() do not reflect
this change and cause build errors because they conditionally compile
with the LNET_DUMP_ON_PANIC macro enabled when --enable-panic_dumplog
is enabled.

This commit therefore resolves the issue by amending the code that
calls the cfs_print_to_console() functions that were not updated.

Test-Parameters: trivial
Fixes: 02fc9e8977 ("LU-17623 libcfs: save msg_fn pointer to avoid race")
Signed-off-by: Jihyeon Gim <potatogim@gluesys.com>
Change-Id: I6480642b246830393c09ed48d8a7c14111f7c39f
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/59061
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Emoly Liu <emoly@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>